--- a/x-dev-slider.css
+++ b/x-dev-slider.css
@@ -23,6 +23,7 @@
     transition: 0.6s ease;
     user-select: none;
     background-color: rgba(0,0,0,0.5);
+    user-select: none;
 }
 .next {
     right: 0;
