--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -75,7 +75,7 @@ main {
 main h1 {
     font-weight: 600;
     font-size: 3.5rem;
-    margin: 5.5rem 0;
+    margin: 80px 0;
     text-align: center;
     color: #353638;
     background-color: rgba(255, 255, 255, 0.3);
