--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -7,6 +7,7 @@
     -ms-grid-columns: (1fr)[12];
     grid-template: repeat(20, 80px) / repeat(12, 1fr);
     overflow: hidden;
+    grid-gap: 10px;
 }
 .grid img {
     width: 100%;
