--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -41,24 +41,36 @@
     background-color: #2c2f33;
 }
 .a {
+    -ms-grid-row: 1;
     grid-row-start: 1;
+    -ms-grid-row-span: 5;
     grid-row-end: 6;
+    -ms-grid-column: 1;
     grid-column-start: 1;
+    -ms-grid-column-span: 5;
     grid-column-end: 6;
     z-index: 1;
 }
 .b {
+    -ms-grid-row: 2;
     grid-row-start: 2;
+    -ms-grid-row-span: 1;
     grid-row-end: 3;
+    -ms-grid-column: 6;
     grid-column-start: 6;
+    -ms-grid-column-span: 7;
     grid-column-end: 13;
     z-index: 6;
     padding-left: 20px;
 }
 .c {
+    -ms-grid-row: 3;
     grid-row-start: 3;
+    -ms-grid-row-span: 1;
     grid-row-end: 4;
+    -ms-grid-column: 6;
     grid-column-start: 6;
+    -ms-grid-column-span: 7;
     grid-column-end: 13;
     z-index: 6;
     padding-left: 20px;
