--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -9,6 +9,11 @@
     overflow: hidden;
     grid-gap: 10px;
 }
+@supports not (grid-gap) {
+  .a {
+    margin-bottom: 10px;
+  }
+}
 .grid img {
     width: 100%;
     height: 100%;
