--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -9,7 +9,7 @@
     overflow: hidden;
     grid-gap: 10px;
 }
-@supports not (grid-gap) {
+@supports not (grid-gap: 10px) {
   .a {
     margin-bottom: 10px;
   }
