--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -9,11 +9,6 @@
     overflow: hidden;
     grid-gap: 10px;
 }
-@supports not (grid-gap: 10px) {
-  .a {
-    margin-bottom: 10px;
-  }
-}
 .grid img {
     width: 100%;
     height: 100%;
@@ -179,51 +174,75 @@
         left: 40%;
     }
     .a {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 6;
         grid-column-end: 7;
     }
     .b {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .c {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .d {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 6;
         grid-column-end: 7;
     }
     .e {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .f {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .g {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 6;
         grid-column-end: 7;
     }
     .h {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .i {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .j {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 6;
         grid-column-end: 7;
     }
     .k {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
     .l {
+        -ms-grid-column: 7;
         grid-column-start: 7;
+        -ms-grid-column-span: 6;
         grid-column-end: 13;
     }
 }
