--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -373,6 +373,8 @@
 
 @media only screen and (max-width: 600px) {
     .grid {
+        -ms-grid-rows: (70px)[20];
+        -ms-grid-columns: (1fr)[12];
         grid-template: repeat(20, 70px) / repeat(12, 1fr);
      }
     .title {
@@ -382,22 +384,30 @@
         display: none;
     }
     .a {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 12;
         grid-column-end: 13;
         padding: 0;
     }
     .d {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 12;
         grid-column-end: 13;
         padding: 0;
     }
     .g {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 12;
         grid-column-end: 13;
         padding: 0;
     }
     .j {
+        -ms-grid-column: 1;
         grid-column-start: 1;
+        -ms-grid-column-span: 12;
         grid-column-end: 13;
         padding: 0;
     }
