--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -3,8 +3,8 @@
     display: grid;
     width: 100%;
     margin: auto;
-    -ms-grid-rows: (80px)[20];
-    -ms-grid-columns: (1fr)[12];
+    -ms-grid-rows: 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px 10px 80px;
+    -ms-grid-columns: 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr 10px 1fr;
     grid-template: repeat(20, 80px) / repeat(12, 1fr);
     overflow: hidden;
     grid-gap: 10px;
