--- a/x-dev-slider.css
+++ b/x-dev-slider.css
@@ -21,7 +21,12 @@
     color: white;
     font-weight: bold;
     font-size: 18px;
+    -webkit-transition: 0.6s ease;
+    -o-transition: 0.6s ease;
     transition: 0.6s ease;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
     background-color: rgba(0,0,0,0.5);
 }
@@ -44,6 +49,8 @@
     background-color: #bbbbbb;
     border-radius: 50%;
     display: inline-block;
+    -webkit-transition: background-color 0.6s ease;
+    -o-transition: background-color 0.6s ease;
     transition: background-color 0.6s ease;
 }
 .active, .dot:hover {
