--- a/x-dev-slider.css
+++ b/x-dev-slider.css
@@ -13,6 +13,7 @@
     opacity: .9;
 }
 .prev, .next {
+    font-family: 'Zapf Dingbats';
     cursor: pointer;
     position: absolute;
     top: 80%;
