--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -127,6 +127,7 @@ main h2 {
 }
 .team-pic img {
     height: 80%;
+    object-fit: contain;
     -webkit-filter: blur(6px);
     filter: blur(6px);
 }
