--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -126,6 +126,7 @@ main h2 {
     padding-bottom: 30px;
 }
 .team-pic img {
+    width: 100%;
     height: 80%;
     object-fit: contain;
     -webkit-filter: blur(6px);
