--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -424,6 +424,9 @@
         max-height: 500px;
         overflow: hidden;
     }
+    .grid img {
+        margin-top: -50%;
+    }
     .explore {
         margin: 5px 0 15px 0;
     }
