--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -427,7 +427,7 @@
         max-height: 500px;
         overflow: hidden;
     }
-    .grid img {
+    .d img, .j img {
         margin-top: -50%;
     }
     .explore {
