--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -424,7 +424,7 @@
         padding-left: 0;   
     }
     .a, .d, .g, .j {
-        max-height: 500px;
+        height: 500px;
         overflow: hidden;
     }
     .d img, .j img {
