--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -424,11 +424,11 @@
         padding-left: 0;   
     }
     .a, .d, .g, .j {
-        height: 500px;
+        max-height: 500px;
         overflow: hidden;
     }
     .d img, .j img {
-        margin-top: -50%;
+        margin-top: -20%;
     }
     .explore {
         margin: 5px 0 15px 0;
