--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -128,6 +128,7 @@ main h2 {
 .team-pic img {
     width: 100%;
     height: 80%;
+    -o-object-fit: contain;
     object-fit: contain;
     -webkit-filter: blur(6px);
     filter: blur(6px);
