--- a/x-dev-slider.css
+++ b/x-dev-slider.css
@@ -9,6 +9,7 @@
     min-height: 550px;
     height: 100vh;
     width: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
     opacity: .9;
 }
