--- a/x-dev-projects.css
+++ b/x-dev-projects.css
@@ -433,7 +433,7 @@
         padding-left: 0;   
     }
     .d img, .j img {
-        
+        margin-top: -20%;
     }
     .title p {
         margin: 10px 0;
