--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -502,7 +502,14 @@ a[href^=tel] {
 
 .contact__google-maps {
     width: 100%;
-    height: auto;
+    height: 20rem;
+}
+
+.contact__google-maps-image {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
 }
 
 /* 4. Footer
