--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -16,6 +16,19 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@font-face {
+    font-family: "Font Awesome 5 Free";
+    font-style: normal;
+    font-weight: 900;
+    font-display: auto;
+    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot);
+    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(https://fontawesome.com/webfonts/fa-solid-900.woff2) format("woff2"), url(https://fontawesome.com/webfonts/fa-solid-900.woff) format("woff"), url(https://fontawesome.com/webfonts/fa-solid-900.ttf) format("truetype"), url(https://fontawesome.com/webfonts/fa-solid-900.svg#fontawesome) format("svg")
+}
+
+.fa-chevron-up:before {
+    content: "\f077"
+}
+
 /* Site Stylesheet
 
   1. Global
