--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -21,8 +21,12 @@
     font-style: normal;
     font-weight: 900;
     font-display: auto;
-    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot);
-    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(https://fontawesome.com/webfonts/fa-solid-900.woff2) format("woff2"), url(https://fontawesome.com/webfonts/fa-solid-900.woff) format("woff"), url(https://fontawesome.com/webfonts/fa-solid-900.ttf) format("truetype"), url(https://fontawesome.com/webfonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot) integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous";
+    src: url(https://fontawesome.com/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype") integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous", 
+        url(https://fontawesome.com/webfonts/fa-solid-900.woff2) format("woff2") integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous", 
+        url(https://fontawesome.com/webfonts/fa-solid-900.woff) format("woff") integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous", 
+        url(https://fontawesome.com/webfonts/fa-solid-900.ttf) format("truetype") integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous", 
+        url(https://fontawesome.com/webfonts/fa-solid-900.svg#fontawesome) format("svg") integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"
 }
 
 .fa,
