--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -570,6 +570,7 @@ a[href^=tel] {
     height: 60px;
     bottom: 8.5rem;
     right: 5%;
+    transform: translateX(-5%);
     background-color: hsla(0, 0%, 0%, 0.65);
     z-index: -999;
 }
