--- a/x-dev-main.css
+++ b/x-dev-main.css
@@ -569,8 +569,7 @@ a[href^=tel] {
     width: 60px;
     height: 60px;
     bottom: 8.5rem;
-    right: 5%;
-    transform: translateX(-5%);
+    margin-left: 90%;
     background-color: hsla(0, 0%, 0%, 0.65);
     z-index: -999;
 }
